objects/ESC_ServiceNow_Routing__c.object
<CustomObject>
    <description>This Object will hold the mapping of Area of the Business, Source, Assignment Group, Request type and the SLA field.</description>
    <fields>
        <fullName>ESC_ASSIGNMENT_GROUP__c</fullName>
        <label>ASSIGNMENT GROUP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_How_is_the_SN_ticket_created__c</fullName>
        <label>How is the SN ticket created?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_REQUEST_TYPE__c</fullName>
        <label>REQUEST TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_SOURCE__c</fullName>
        <label>SOURCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_SegmentRegion__c</fullName>
        <label>SegmentRegion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Sub_BU__c</fullName>
        <label>SUB-BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ServiceNow Routing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ESC_REQUEST_TYPE__c</columns>
        <columns>ESC_SOURCE__c</columns>
        <columns>ESC_Sub_BU__c</columns>
        <columns>ESC_How_is_the_SN_ticket_created__c</columns>
        <columns>ESC_ASSIGNMENT_GROUP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SN-{00000000}</displayFormat>
        <label>ServiceNow Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceNow Routing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>